// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="Navigation navbar navbar-custom navbar-expand-md navbar-dark bg-dark navbar-nav"
    >
      <a
        class="brand navbar-brand"
        href="/"
      >
        Jobly
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="navbar-nav mr-auto"
        >
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/companies"
            >
              Companies
            </a>
          </div>
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/jobs"
            >
              Jobs
            </a>
          </div>
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/applications"
            >
              Applications
            </a>
          </div>
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/profile"
            >
              Profile
            </a>
          </div>
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/"
            >
              Log out testuser
            </a>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="Navigation navbar navbar-custom navbar-expand-md navbar-dark bg-dark navbar-nav"
    >
      <a
        class="brand navbar-brand"
        href="/"
      >
        Jobly
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="navbar-nav mr-auto"
        >
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/login"
            >
              Login
            </a>
          </div>
          <div
            class="nav-item mr-4 nav-item"
          >
            <a
              class="nav-link"
              href="/signup"
            >
              Sign Up
            </a>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
